--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Image Slideshow</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<nav class="navbar">
+    <ul class="menu">
+        <li class="menu-item"><a href="#">Home</a></li>
+        <li class="menu-item dropdown">
+            <a href="#" class="dropdown-toggle">Services</a>
+            <ul class="dropdown-menu">
+                <li><a href="copy.html">Money Exchange Rates</a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </li>
+        <li class="menu-item"><a href="#">About</a></li>
+        <li class="menu-item"><a href="#">Contact</a></li>
+    </ul>
 <body>
 <div id="results"></div>
   <div class="slideshow-container">
@@ -23,8 +37,6 @@
     <a class="next" onclick="changeSlide(1)">&#10095;</a>
 </div>
 <h1>$Today Money Rates</h1>
-<h4>Bath to Kyats ==> 960bath = 100000mmk</h4>
-<h4>Kyats toBath ==> 100000mmk = 900bath</h4>
 
 
 <div class="dots-container">
@@ -155,6 +167,57 @@
     </script>
 </body>
 <style>
+  
+
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-bottom: -20px;
+    background-color: black;
+}
+
+.menu-item {
+    position: relative;
+}
+
+.menu-item a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
+    text-decoration: none;
+}
+
+.menu-item a:hover {
+    background-color: #575757;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #333;
+    min-width: 160px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-menu a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-menu a:hover {
+    background-color: #575757;
+}
+
+.menu-item:hover .dropdown-menu {
+    display: block;
+}
     h1{
         justify-content: center;
         display: grid;
@@ -165,7 +228,10 @@
     align-items: center;
     gap: 10px;
 }
-
+img{
+    border: 1px solid black;
+    border-radius: 10px;
+}
 #searchInput {
     width: 0;
     padding: 10px;
