--- a/copy.html
+++ b/copy.html
@@ -3,61 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number and Name List</title>
+    <title>Currency Exchange</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="list-container">
-        <div class="list-item" data-number="1" data-name="Item One">1. Item One</div>
-        <div class="list-item" data-number="2" data-name="Item Two">2. Item Two</div>
-        <div class="list-item" data-number="3" data-name="Item Three">3. Item Three</div>
-        <div class="list-item" data-number="4" data-name="Item Four">4. Item Four</div>
-        <div class="list-item" data-number="5" data-name="Item Five">5. Item Five</div>
+    <div class="container">
+        <h1>Currency Exchange</h1>
+        <div class="exchange-form">
+            <div class="input-group">
+                <label for="amount">Amount:</label>
+                <input type="number" id="amount" placeholder="Enter amount">
+            </div>
+            <div class="input-group">
+                <label for="from-currency">From:</label>
+                <select id="from-currency">
+                    <!-- Options will be populated by JavaScript -->
+                </select>
+            </div>
+            <div class="input-group">
+                <label for="to-currency">To:</label>
+                <select id="to-currency">
+                    <!-- Options will be populated by JavaScript -->
+                </select>
+            </div>
+            <button id="convert">Convert</button>
+        </div>
+        <div id="result"></div>
     </div>
-
     <script >
-        document.addEventListener('DOMContentLoaded', function() {
-    const listItems = document.querySelectorAll('.list-item');
+        // script.js
+document.addEventListener('DOMContentLoaded', () => {
+    const apiKey = '96c7c9a902-dfeb1cfa05-se0mmk'; // Replace with your FastForex API key
+    const apiUrl = `https://api.fastforex.io/fetch-all?api_key=${apiKey}`;
 
-    listItems.forEach(item => {
-        item.addEventListener('click', function() {
-            const number = this.getAttribute('data-number');
-            const name = this.getAttribute('data-name');
-            alert(`Number: ${number}, Name: ${name}`);
+    const amountInput = document.getElementById('amount');
+    const fromCurrency = document.getElementById('from-currency');
+    const toCurrency = document.getElementById('to-currency');
+    const convertButton = document.getElementById('convert');
+    const resultDiv = document.getElementById('result');
+
+    fetch(apiUrl)
+        .then(response => response.json())
+        .then(data => {
+            const currencies = Object.keys(data.results);
+            populateCurrencyDropdown(currencies);
+        })
+        .catch(error => {
+            console.error('Error fetching currencies:', error);
         });
+
+    function populateCurrencyDropdown(currencies) {
+        currencies.forEach(currency => {
+            const optionFrom = document.createElement('option');
+            optionFrom.value = currency;
+            optionFrom.textContent = currency;
+            fromCurrency.appendChild(optionFrom);
+
+            const optionTo = document.createElement('option');
+            optionTo.value = currency;
+            optionTo.textContent = currency;
+            toCurrency.appendChild(optionTo);
+        });
+    }
+
+    convertButton.addEventListener('click', () => {
+        const amount = amountInput.value;
+        const from = fromCurrency.value;
+        const to = toCurrency.value;
+
+        if (amount === '' || isNaN(amount)) {
+            alert('Please enter a valid amount');
+            return;
+        }
+
+        const conversionApiUrl = `https://api.fastforex.io/convert?from=${from}&to=${to}&amount=${amount}&api_key=${apiKey}`;
+
+        fetch(conversionApiUrl)
+            .then(response => response.json())
+            .then(data => {
+                const convertedAmount = data.result[to];
+                resultDiv.textContent = `${amount} ${from} = ${convertedAmount.toFixed(2)} ${to}`;
+            })
+            .catch(error => {
+                console.error('Error fetching conversion rate:', error);
+                resultDiv.textContent = 'Error fetching conversion rate. Please try again later.';
+            });
     });
 });
 
     </script>
 </body>
 <style>
-    body {
+    /* styles.css */
+body {
     font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
-    margin: 0;
 }
 
-.list-container {
+.container {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    text-align: center;
 }
 
-.list-item {
+h1 {
+    margin-bottom: 20px;
+}
+
+.input-group {
+    margin-bottom: 15px;
+}
+
+.input-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.input-group input,
+.input-group select {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+button {
     padding: 10px 15px;
-    margin: 5px 0;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    width: 100%;
 }
 
-.list-item:hover {
-    background-color: #e0e0e0;
+button:hover {
+    background-color: #0056b3;
+}
+
+#result {
+    margin-top: 20px;
+    font-size: 1.2em;
 }
 
 </style>
