--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <span class="dot" onclick="currentSlide(2)"></span>
     <span class="dot" onclick="currentSlide(3)"></span>
 </div>
-<h3>Choice Your Payment Bank</h3>
+<h3>Choose Your Payment Bank</h3>
 <h3>ငွေပေးချေမည့်_ဘဏ်ရွှေးချယ်ပါ.</h3>
     <div class="container">
         <div class="wrapper">
@@ -77,7 +77,7 @@
         </div>
     </div>
     <hr>
-    <h3>Choice Your Transfer Bank </h3>
+    <h3>Choose Your Transfer Bank </h3>
     <h3>ငွေ_လွှဲပြောင်းမည့်_ဘဏ်ရွှေးချယ်ပါ.</h3>
     <div class="container">
         <div class="wrapper">
