--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </li>
         <li class="menu-item"><a href="#">About</a></li>
-        <li class="menu-item"><a href="#">Contact</a></li>
+        <li class="menu-item"><a href="contact.html">Contact</a></li>
     </ul>
 <body>
 <div id="results"></div>
