--- a/contact.html
+++ b/contact.html
@@ -117,11 +117,11 @@ button:hover {
 }
 
 input[type="submit"] {
-  margin-left: 30%;
+  width: 100%;
   height: 40px;
   padding: 6px 30px;
   font-size: 14px;
-  background-color: #ff4000;
+  background-color: #006aff;
   color: #fff;
   border: 1px solid black;
   border-radius: 20px;
