--- a/contact.html
+++ b/contact.html
@@ -67,11 +67,14 @@ document.getElementById('form')
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 100%;
-    max-width: 400px;
+    
 }
 
 .feedback-form-container h2 {
     margin-bottom: 20px;
+    align-items: center;
+      justify-content: center;
+      display: grid;
 
 }
 
