--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       </div>
     
 </div>
-        <input type="submit" id="button" value="Send Email" >
+        <input type="submit" id="button" value="Send message" >
       </form>
       
       <script type="text/javascript"
