--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="kasikornpayment.html" style="color: black;"><img src="kbzbank.jpg" width="100px"></a><a href="kasikornpayment.html" style="color: rgb(0, 0, 0);"><h5>kBZ Bank</h5></a>  
               </div>
               <div class="item">
-                <a href="bangkokbank.html" style="color: black;"><img src="kpay.png" width="100px"></a><a href="bangkokbank.html" style="color: rgb(0, 0, 0);"><h5>Kpay </h5></a>  
+                <a href="kbz.html" style="color: black;"><img src="kpay.png" width="100px"></a><a href="bangkokbank.html" style="color: rgb(0, 0, 0);"><h5>Kpay </h5></a>  
               </div>
               <div class="item">
                 <a href="truemoneypay.html" style="color: black;"><img src="yomabank.jpg" width="100px"></a><a href="truemoneypay.html" style="color: rgb(0, 0, 0);"><h5>Yoma Bank</h5></a>  
