--- a/kbz.html
+++ b/kbz.html
@@ -33,7 +33,7 @@
       <h2>Kpay_Name  = Win Zaw Htun     </h2>
       <h2>Kpay_Number = 09692125443</h2>
       
-      <p>1.ငွေလွှဲ ပြောင်း ပြီးပါက လွှဲ ‌ပြောင်းပေးသည့် အမည်နှင့် id  ,ငွေပမာဏ   ထည့် ပေးပါ</p>
+      <p>1.ငွေလွှဲ ပြောင်း ပြီးပါက လွှဲ ‌ပြောင်းပေးသည့် (အမည်....နှင့် id....)  ,မဖြစ်မနေ ထည့် ပေးပါ။</p>
       <p>2.Note မှာ မိမိ လုပ်ဆောင် လိုသော အရာကို ရေးထည့်ပါ example (for mlbb diamond....,for pupg UC...for transfer money.....)တစ် ခုခုရေးထည့်ပေးပါ။</p>
 
     
