--- a/bangkokbank.html
+++ b/bangkokbank.html
@@ -31,8 +31,8 @@
       </form>
       <div class="bankname">
     
-      <p>လွှဲ ရမည့် အမည် = Maung Maung</p>
-      <p>လွှဲ ရမည့် နံပတ် = 123456789</p>
+      <p>လွှဲ ရမည့် အမည် = error_</p>
+      <p>လွှဲ ရမည့် နံပတ် = error_</p>
       <p>1.Note မှာ မိမိ လုပ်ဆောင် လိုသော အရာကို ရေးထည့်ပါ
         example (for game....,for transfer money.....)တစ် ခုခုရေးထညိ့ပေးပါ။</p>
         <p>2.ငွေလွှဲ ပြောင်း ပြီးပါက လွှဲ ‌ပြောင်းပေးသည့် အမည်နှင့် id  ,ငွေပမာဏ   ထည့် ပေးပါ</p>
