--- a/kasikornpayment.html
+++ b/kasikornpayment.html
@@ -31,8 +31,8 @@
       </form>
       <div class="bankname">
      
-      <p>လွှဲ ရမည့် အမည် = Thar wai phyo</p>
-      <p>လွှဲ ရမည့် နံပတ် = 0987654321</p>
+      <p>လွှဲ ရမည့် အမည် = error_</p>
+      <p>လွှဲ ရမည့် နံပတ် = error_</p>
       
       <p>1.Note မှာ မိမိ လုပ်ဆောင် လိုသော အရာကို ရေးထည့်ပါ
         example (for game....,for transfer money.....)တစ် ခုခုရေးထညိ့ပေးပါ။</p>
